navigation z-index fix

--- a/src/assets/sass/_nav.scss
+++ b/src/assets/sass/_nav.scss
@@ -25,7 +25,7 @@
   .navigation {
     transition: box-shadow .4s .15s, transform .5s;
     position: absolute;
-    z-index: 10;
+    z-index: 15;
     top: 0;
     left: 0;
     right: 0;
